--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body, html {
   width: 100%;
   height: 100%;
   margin: 0;
-  background-image: url(images/tree.jpg);
+  background-image: url(tree.jpg);
   display: flex;
   background-repeat: no-repeat;
   background-size: cover;
